bug fix - children > 3 && combination of nuclear and sattelite nodes now supported

--- a/relname_mapping.json
+++ b/relname_mapping.json
@@ -37,7 +37,10 @@
   "e-elaboration": "elab",
   "list": "list",
   "evidence": "evid",
-  "cause": "cause"
+  "cause": "cause",
+  "contrast": "contrast",
+  "restatement": "restatement",
+  "summary": "summary"
 
 
 
