bug fix - sort_children call removed

--- a/relname_mapping.json
+++ b/relname_mapping.json
@@ -1,47 +1,45 @@
 {
   "evaluation": "eval",
-  "evaluation-s": "eval",
-  "elaboration-object-attribute": "elab",
-  "explanation-argumentative": "evid",
+  "evaluation-s": "eval-s",
+  "elaboration-object-attribute": "elab-ob-att",
+  "explanation-argumentative": "expl",
   "Same-Unit": "same",
   "attribution": "attr",
   "background": "back",
   "Contrast": "cont",
-  "consequence-s": "cause",
-  "consequence-b": "cause",
+  "consequence-s": "conseq-s",
   "leaf": "leaf",
-  "": "",
   "List": "list",
-  "consequence-n": "cause",
-  "elaboration-object-attribute-e": "elab",
-  "purpose-e": "purp",
+  "consequence-n": "conseq-b",
+  "elaboration-object-attribute-e": "elab-ob-att-e",
+  "purpose-e": "purp-e",
   "condition": "cond",
   "manner": "mann",
-  "elaboration-additional-e": "elab",
+  "elaboration-additional-e": "elab-add-e",
   "span": "span",
-  "abcccc": "abcccc",
-  "cbd": "cbd",
   "joint": "joint",
-  "result": "cause",
-  "interpretation": "interpretation",
+  "result": "res",
+  "interpretation": "interpr",
   "elaboration": "elab",
-  "reason": "cause",
-  "conjunction": "joint",
-  "evaluation-n": "eval",
-  "disjunction": "joint",
-  "circumstance": "circumstance",
+  "reason": "reason",
+  "conjunction": "conj",
+  "evaluation-n": "eval-n",
+  "disjunction": "disj",
+  "circumstance": "circums",
   "concession": "concession",
-  "sequence": "sequence",
+  "sequence": "seq",
   "antithesis": "antithesis",
-  "preparation": "preparation",
-  "e-elaboration": "elab",
+  "preparation": "prep",
+  "e-elaboration": "e-elab",
   "list": "list",
   "evidence": "evid",
   "cause": "cause",
   "contrast": "contrast",
-  "restatement": "restatement",
-  "summary": "summary"
-
-
+  "restatement": "restate",
+  "summary": "summary",
+  "purpose": "purp",
+  "solutionhood": "solutionhood",
+  "justify": "justify",
+  "": ""
 
 }
