pcc preparation steps added - extra files removed and tidied

--- a/relname_mapping.json
+++ b/relname_mapping.json
@@ -40,6 +40,10 @@
   "purpose": "purp",
   "solutionhood": "solutionhood",
   "justify": "justify",
-  "": ""
-
+  "means": "means",
+  "": "",
+  "otherwise": "otherwise",
+  "enablement": "enablement",
+  "unless": "unless", 
+  "motivation": "motivation"
 }
