updated relname mappings

--- a/relname_mapping.json
+++ b/relname_mapping.json
@@ -1,21 +1,21 @@
 {
   "evaluation": "eval",
-  "evaluation-s": "eval-s",
-  "elaboration-object-attribute": "elab-ob-att",
+  "evaluation-s": "eval",
+  "elaboration-object-attribute": "elab",
   "explanation-argumentative": "expl",
   "Same-Unit": "same",
   "attribution": "attr",
   "background": "back",
   "Contrast": "cont",
-  "consequence-s": "conseq-s",
+  "consequence-s": "conseq",
   "leaf": "leaf",
   "List": "list",
-  "consequence-n": "conseq-b",
-  "elaboration-object-attribute-e": "elab-ob-att-e",
-  "purpose-e": "purp-e",
+  "consequence-n": "conseq",
+  "elaboration-object-attribute-e": "elab",
+  "purpose-e": "purp",
   "condition": "cond",
   "manner": "mann",
-  "elaboration-additional-e": "elab-add-e",
+  "elaboration-additional-e": "elab",
   "span": "span",
   "joint": "joint",
   "result": "res",
@@ -23,14 +23,14 @@
   "elaboration": "elab",
   "reason": "reason",
   "conjunction": "conj",
-  "evaluation-n": "eval-n",
+  "evaluation-n": "eval",
   "disjunction": "disj",
   "circumstance": "circums",
   "concession": "concession",
   "sequence": "seq",
   "antithesis": "antithesis",
   "preparation": "prep",
-  "e-elaboration": "e-elab",
+  "e-elaboration": "elab",
   "list": "list",
   "evidence": "evid",
   "cause": "cause",
@@ -41,9 +41,9 @@
   "solutionhood": "solutionhood",
   "justify": "justify",
   "means": "means",
-  "": "",
   "otherwise": "otherwise",
   "enablement": "enablement",
   "unless": "unless", 
-  "motivation": "motivation"
+  "motivation": "motivation",
+  "": "" 
 }
